--- a/css/detalhes.css
+++ b/css/detalhes.css
@@ -6,14 +6,7 @@ body {
     color: #343a40;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 40px auto;
-    padding: 20px;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+
 
 /* Título do imóvel */
 h1 {
@@ -89,4 +82,53 @@ p {
     .text-muted {
         font-size: 1.2rem;
     }
+}
+
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.logo-nav,#logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    width: auto;
+    background-color: #F8F8FF;
+}
+.navbar-expand-lg{
+    background-color: #F8F8FF;
+
+}
+
+.nav-link {
+    color:black; 
+    font-size: large; /* Menor tamanho de fonte */
+    font-family: "Epilogue", sans-serif;
+    text-decoration: none;
+    padding: 3px 5px; /* Menor padding */
+    transition: color 0.3s ease;
+}
+.navbar-nav {
+    display: flex;
+    justify-content: center;  /* Centraliza os itens de navegação */
+    flex-grow: 1;
+    gap: 15px;  /* Menor espaçamento entre os itens */
+    align-items: center;  
+}
+.nav-link:hover {
+    color:red;  /* Cor quando passar o mouse sobre o link */
+}
+footer{
+    background-color: #212529;
+}
+input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+}
+.texto{
+    color: white;
 }
